--- a/index.css
+++ b/index.css
@@ -24,8 +24,8 @@
 .res-card {
     margin: 5px;
     padding: 5px;
-    width: 200px; 
-    height: 440px;
+    width: 190px; 
+    height: 420px;
 }
 .res-container{
     display: flex;
@@ -44,4 +44,9 @@
 .res-logo {
     width: 100%;
     height: 200px;
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
 }
