--- a/index.css
+++ b/index.css
@@ -24,8 +24,8 @@
 .res-card {
     margin: 5px;
     padding: 5px;
-    width: 190px; 
-    height: 420px;
+    width: 230px; 
+    height: 440px;
 }
 .res-container{
     display: flex;
@@ -50,3 +50,27 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-card {
+    margin: 20px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+}
+
+.shimmer-container {
+    flex-wrap: wrap;
+    display: flex;
+}
+
+.login{
+    margin: 10px;
+    padding: 0 10px;
+    cursor: pointer;
+    color: black;
+}
+
+.filter{
+    display: flex;
+}
+
