--- a/index.css
+++ b/index.css
@@ -1,81 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.logo {
-    width: 200px;
-}
-
-
-
-.nav-items > ul{
-    font-size: 24px;
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul >li{
-    padding: 10px;
-    margin: 10px;
-}
-
-.res-card {
-    margin: 5px;
-    padding: 5px;
-    width: 230px; 
-    height: 440px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.search{
-  padding: 10px;  
-}
-
-.res-logo {
-    width: 100%;
-    height: 200px;
-}
-
-.filter-btn{
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-card {
-    margin: 20px;
-    width: 200px;
-    height: 400px;
-    background-color: #f0f0f0;
-}
-
-.shimmer-container {
-    flex-wrap: wrap;
-    display: flex;
-}
-
-.login{
-    margin: 10px;
-    padding: 0 10px;
-    cursor: pointer;
-    color: black;
-}
-
-.filter{
-    display: flex;
-}
-
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
